調整 投注未結/已結的清單排版

--- a/app/src/main/res/layout/content_match_record.xml
+++ b/app/src/main/res/layout/content_match_record.xml
@@ -106,7 +106,7 @@
                 <TextView
                     android:id="@+id/tv_count_down"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:textAlignment="viewEnd"
                     android:textColor="@color/color_317FFF_0760D4"
                     android:textSize="@dimen/textSize14sp"
