--- a/app/src/main/res/layout/view_account_history_next_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_next_title_bar.xml
@@ -85,7 +85,8 @@
         app:drawableLeftCompat="@drawable/ic_info_white"
         app:drawableTint="@color/color_A3A3A3_666666"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sport_selector" />
+        app:layout_constraintTop_toBottomOf="@+id/sport_selector"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
