--- a/app/src/main/res/drawable/ic_arrow_gray.xml
+++ b/app/src/main/res/drawable/ic_arrow_gray.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="10"
     android:viewportHeight="10">
     <path
-        android:fillColor="#94969F"
+        android:fillColor="@color/color_8F8F8F_999999"
         android:fillType="evenOdd"
         android:pathData="M4.773,8L0,2 1.625,2 5.001,6.243 8.376,2 10,2 10,2.001 5.227,8z" />
 </vector>
