--- a/app/src/main/res/layout/dialog_self_limit_froze_important.xml
+++ b/app/src/main/res/layout/dialog_self_limit_froze_important.xml
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="11dp"
-            android:background="@color/color_E2E2E2"
+            android:background="@color/color_1F1F1F_E2E2E2"
             app:layout_constraintTop_toBottomOf="@+id/tv_title"
             app:layout_constraintVertical_bias="1" />
 
