--- a/app/src/main/res/layout/fragment_feedback_detail.xml
+++ b/app/src/main/res/layout/fragment_feedback_detail.xml
@@ -63,6 +63,8 @@
             android:maxLength="500"
             android:hint="@string/can_input_1_to_500_word"
             android:padding="14dp"
+            android:textColor="@color/color_e5e5e5_333333"
+            android:textColorHint="@color/color_AEAEAE_545454"
             android:textSize="@dimen/textSize14sp" />
 
         <include
