--- a/app/src/main/res/layout/fragment_feedback_suggest.xml
+++ b/app/src/main/res/layout/fragment_feedback_suggest.xml
@@ -15,6 +15,7 @@
         android:layout_marginHorizontal="14dp"
         android:layout_marginTop="14dp"
         app:cardCornerRadius="8dp"
+        app:cardBackgroundColor="@color/transparent_black_0"
         app:cardElevation="0dp">
 
         <LinearLayout
@@ -76,7 +77,7 @@
                     android:gravity="center"
                     android:text="@string/write_suggestion"
                     android:textAllCaps="true"
-                    android:textColor="@color/color_191919_FCFCFC"
+                    android:textColor="@color/color_FCFCFC"
                     android:textSize="@dimen/textSize16sp" />
 
 
