--- a/app/src/main/res/layout/fragment_help_center.xml
+++ b/app/src/main/res/layout/fragment_help_center.xml
@@ -3,44 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/color_141414_F3F4F5"
-    android:divider="@drawable/divider_straight"
     android:dividerPadding="1dp"
     android:orientation="vertical"
     android:showDividers="middle|end">
-
-    <LinearLayout
-        android:id="@+id/linear_contact_us"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@color/color_191919_FCFCFC"
-        android:gravity="center"
-        android:paddingStart="18dp"
-        android:paddingEnd="20dp"
-        android:visibility="gone"
-        tools:visibility="visible">
-
-        <ImageView
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:src="@drawable/ic_info_contact_us" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
-            android:layout_marginEnd="6dp"
-            android:layout_weight="1"
-            android:text="@string/contact_us"
-            android:textColor="@color/color_e5e5e5_333333"
-            android:textSize="@dimen/textSize14sp" />
-
-        <ImageView
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:src="@drawable/ic_arrow_right" />
-    </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/linear_game_rule"
@@ -54,7 +21,8 @@
         <ImageView
             android:layout_width="22dp"
             android:layout_height="22dp"
-            android:src="@drawable/ic_info_game_rules" />
+            android:src="@drawable/ic_info_game_rules"
+            app:tint="@color/color_666666_bcbcbc" />
 
         <TextView
             android:layout_width="0dp"
