--- a/app/src/main/res/layout/view_base_tool_bar_no_drawer.xml
+++ b/app/src/main/res/layout/view_base_tool_bar_no_drawer.xml
@@ -22,7 +22,7 @@
         android:id="@+id/btn_toolbar_back"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start|center_vertical"
+        android:layout_gravity="start"
         android:contentDescription="@null"
         android:paddingHorizontal="20dp"
         android:scaleType="centerInside"
