--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -71,6 +71,7 @@
     <color name="color_FFFFFF_060F20">@color/color_FFFFFF</color>
     <color name="color_2a2a2a_dedede">@color/color_2a2a2a</color>
     <color name="color_939393_cccccc">@color/color_939393</color>
+    <color name="color_303030_E2E2E2">@color/color_303030</color>
 
     <color name="color_FFFFFF_DE000000">@color/color_FFFFFF</color>
     <color name="color_B3FFFFFF_99000000">@color/transparent_white_70</color>
