--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -126,7 +126,7 @@
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                android:background="@color/color_191919_EEEFF0" />
+                android:background="@color/color_666666_bcbcbc" />
 
             <ImageView
                 android:id="@+id/iv_bank_card_icon"
@@ -148,9 +148,10 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="10dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="11dp"
+                android:layout_width="16dp"
+                android:layout_height="14dp"
+                android:layout_marginEnd="11dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/ic_arrow_down_gray" />
         </LinearLayout>
         <!-- 提款金額 -->
@@ -215,7 +216,7 @@
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
-                android:background="@color/color_191919_EEEFF0" />
+                android:background="@color/color_1F1F1F_E2E2E2" />
 
             <TextView
                 android:id="@+id/tv_commission"
@@ -234,6 +235,7 @@
                 android:background="@drawable/selector_commission_detail_button"
                 android:enabled="false"
                 android:gravity="center"
+                android:textStyle="bold"
                 android:paddingStart="18dp"
                 android:paddingEnd="18dp"
                 android:text="@string/commission_detail"
@@ -267,10 +269,10 @@
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:background="@drawable/bg_radius_20_button_dusk"
-            android:letterSpacing="0.2"
             android:paddingVertical="9dp"
             android:text="@string/submit"
             android:textStyle="bold"
+            android:textAllCaps="true"
             android:textAlignment="center"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp" />
