調整投注紀錄的版型（有換行位移的可能）

--- a/app/src/main/res/layout/item_account_history_next_content_outright.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_outright.xml
@@ -90,8 +90,9 @@
 
             <TextView
                 android:id="@+id/tv_game_type_play_cate"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="6dp"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize14sp"
