--- a/app/src/main/res/layout/item_parlay_combo_detail.xml
+++ b/app/src/main/res/layout/item_parlay_combo_detail.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/color_191919_FCFCFC"
-            android:gravity="center"
+            android:gravity="left"
             android:minHeight="48dp"
             android:orientation="horizontal"
             android:paddingHorizontal="@dimen/margin_28"
@@ -21,19 +21,22 @@
                 android:id="@+id/tvLeagueName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="55dp"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
+                android:layout_marginEnd="6dp"
                 app:layout_constraintRight_toLeftOf="@+id/tvScore"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tvScore"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintHorizontal_bias="0"
                 tools:text="篮球" />
 
             <TextView
                 android:id="@+id/tvScore"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/color_e5e5e5_333333"
