--- a/app/src/main/res/layout/content_parlay_match.xml
+++ b/app/src/main/res/layout/content_parlay_match.xml
@@ -75,6 +75,7 @@
                     android:id="@+id/tv_count_down_parley"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:textAlignment="viewEnd"
                     android:textColor="@color/color_317FFF_0760D4"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="30s" />
