--- a/app/src/main/res/layout/item_account_history_next_content.xml
+++ b/app/src/main/res/layout/item_account_history_next_content.xml
@@ -35,7 +35,6 @@
                 android:id="@+id/tv_playName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:text="@{matchOdd.leagueName}"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_FFFFFF"
@@ -105,7 +104,7 @@
 
             <TextView
                 android:id="@+id/tv_game_type_play_cate"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
                 android:gravity="start"
@@ -156,7 +155,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_score"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:overScrollMode="never"
                 android:scrollbars="none"
@@ -169,7 +168,7 @@
 
             <TextView
                 android:id="@+id/tv_score"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:textAlignment="viewEnd"
@@ -199,7 +198,6 @@
                 android:id="@+id/tv_bet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:text="@string/bet_info_list_bet_quota"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
@@ -211,7 +209,6 @@
                 android:id="@+id/tv_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
@@ -226,7 +223,6 @@
                 android:id="@+id/tv_win_lose"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:text="@string/win_lose_mark"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/color_e5e5e5_333333"
@@ -253,7 +249,6 @@
                 android:id="@+id/tv_win_lose_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:textAlignment="viewEnd"
                 android:textSize="@dimen/textSize12sp"
                 app:hideByStatus="@{row.status}"
@@ -268,7 +263,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:gravity="center"
                 android:text="@{row.orderNo}"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_8F8F8F_999999"
@@ -284,7 +278,6 @@
                 android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/color_8F8F8F_999999"
                 android:textSize="@dimen/textSize12sp"
