--- a/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
@@ -32,9 +32,9 @@
 
             <TextView
                 android:id="@+id/tv_game_type_play_cate"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
+                android:layout_marginEnd="6dp"
                 android:gravity="start"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
@@ -51,8 +51,9 @@
 
             <TextView
                 android:id="@+id/tv_league_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="6dp"
                 android:text="@{matchOdd.leagueName}"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
@@ -66,7 +67,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_score"
-                android:layout_width="60dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:overScrollMode="never"
                 android:scrollbars="none"
@@ -78,7 +79,7 @@
 
             <TextView
                 android:id="@+id/tv_score"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/color_A3A3A3_666666"
@@ -126,7 +127,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
-                android:gravity="center"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize12sp"
