--- a/app/src/main/res/layout/crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/crypto_pay_fragment.xml
@@ -380,7 +380,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
-                    android:color="@color/color_191919_FCFCFC"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     app:cardCornerRadius="5dp"
@@ -390,7 +389,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_upload">
+                    app:layout_constraintTop_toBottomOf="@+id/tv_upload"
+                    app:cardBackgroundColor="@color/color_191919_FCFCFC">
 
                     <LinearLayout
                         android:layout_width="match_parent"
