--- a/app/src/main/res/layout/activity_results_settlement.xml
+++ b/app/src/main/res/layout/activity_results_settlement.xml
@@ -41,12 +41,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:ellipsize="end"
+                android:gravity="start|center_vertical"
                 android:maxWidth="50dp"
-                android:gravity="left|center_vertical"
                 android:maxLines="1"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize14sp"
                 app:layout_constraintEnd_toStartOf="@id/imageView"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:text="@string/soccer" />
 
@@ -102,11 +103,11 @@
             android:id="@+id/et_key_word"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_gravity="center"
             android:layout_marginEnd="6dp"
             android:layout_weight="3"
             android:background="@drawable/search_gray_5dp"
             android:ellipsize="end"
+            android:textColor="@color/color_FFFFFF_DE000000"
             android:gravity="center_vertical|start"
             android:hint="@string/search"
             android:imeOptions="actionDone"
