--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -60,6 +60,7 @@
         android:background="@color/color_191919_FCFCFC"
         android:gravity="start|center_vertical"
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:paddingStart="24dp"
         android:paddingTop="12dp"
         android:paddingEnd="24dp"
@@ -104,7 +105,7 @@
         <LinearLayout
             android:id="@+id/ll_select_bank"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="44dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/bg_square_shape_4dp_white"
             android:gravity="center"
@@ -192,7 +193,7 @@
         <LinearLayout
             android:id="@+id/ll_commission"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="44dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/effect_edittext_bg"
             android:focusable="true"
@@ -236,8 +237,7 @@
                 android:enabled="false"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:paddingStart="18dp"
-                android:paddingEnd="18dp"
+                android:paddingHorizontal="10dp"
                 android:text="@string/commission_detail"
                 android:textColor="@color/selector_blue_light_gray"
                 android:textSize="12dp" />
