--- a/app/src/main/res/layout/content_game_detail_result_rv.xml
+++ b/app/src/main/res/layout/content_game_detail_result_rv.xml
@@ -11,29 +11,22 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_play_cate_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:paddingHorizontal="10dp"
-            android:paddingVertical="6dp">
-
-            <TextView
-                android:id="@+id/tv_play_cate_name"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textColor="@color/color_A3A3A3_666666"
-                android:textSize="@dimen/textSize12sp"
-                tools:text="让球" />
-        </LinearLayout>
-
+            android:paddingVertical="6dp"
+            android:textColor="@color/color_A3A3A3_666666"
+            android:textSize="@dimen/textSize12sp"
+            tools:text="让球" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/color_191919_EEEFF0" />
+            android:background="@color/color_1F1F1F_E2E2E2" />
 
         <TextView
             android:id="@+id/tv_play_content"
@@ -53,5 +46,5 @@
         android:id="@+id/bottom_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_191919_EEEFF0" />
+        android:background="@color/color_1F1F1F_E2E2E2" />
 </LinearLayout>
