--- a/app/src/main/res/layout/item_listview_settlement_league.xml
+++ b/app/src/main/res/layout/item_listview_settlement_league.xml
@@ -22,6 +22,7 @@
         android:paddingTop="16dp"
         android:paddingEnd="20dp"
         android:paddingBottom="16dp"
+        android:textStyle="bold"
         android:textColor="@color/color_e5e5e5_333333"
         android:textSize="@dimen/textSize14sp"
         tools:text="@string/league" />
