--- a/app/src/main/res/layout/item_match_result_match.xml
+++ b/app/src/main/res/layout/item_match_result_match.xml
@@ -70,7 +70,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/color_e5e5e5" />
+            android:background="@color/color_1F1F1F_E2E2E2" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
@@ -148,7 +148,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_e5e5e5" />
+        android:background="@color/color_1F1F1F_E2E2E2" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -171,14 +171,14 @@
                 android:layout_width="12dp"
                 android:layout_height="12dp"
                 android:layout_marginEnd="5dp"
+                android:background="@drawable/bg_radius_20_white"
                 android:src="@drawable/ic_more" />
 
             <TextView
                 android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@color/color_A3A3A3_666666"
+                android:textColor="@color/color_A3A3A3_666666"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constraintEnd_toStartOf="@+id/line2"
                 app:layout_constraintStart_toStartOf="parent"
@@ -189,7 +189,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/color_e5e5e5" />
+            android:background="@color/color_1F1F1F_E2E2E2" />
 
         <TextView
             android:id="@+id/empty"
@@ -205,6 +205,5 @@
         android:id="@+id/bottom_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_e5e5e5" />
-
+        android:background="@color/color_1F1F1F_E2E2E2" />
 </LinearLayout>
