--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -78,6 +78,7 @@
     <color name="color_202020">#202020</color>
     <color name="color_dedede">#dedede</color>
     <color name="color_2a2a2a">#2a2a2a</color>
+    <color name="color_505050">#505050</color>
     <color name="color_33303030">#33303030</color>
     <color name="color_33DDDDDD">#33DDDDDD</color>
 
@@ -127,6 +128,7 @@
     <color name="color_666666_bcbcbc">@color/color_bcbcbc</color>
     <color name="color_616161_b4b4b4">@color/color_b4b4b4</color>
     <color name="color_8F8F8F_999999">@color/color_999999</color>
+    <color name="color_505050_E2E2E2">@color/color_E2E2E2</color>
     <color name="color_A3A3A3_999999">@color/color_999999</color>
     <color name="color_A3A3A3_666666">@color/color_666666</color>
     <color name="color_ADADAD_444444">@color/color_444444</color>
