[Fix] switch language layout of dark mode color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -79,6 +79,7 @@
     <color name="color_dedede">#dedede</color>
     <color name="color_2a2a2a">#2a2a2a</color>
     <color name="color_505050">#505050</color>
+    <color name="color_2654A9">#2654A9</color>
     <color name="color_33303030">#33303030</color>
     <color name="color_33DDDDDD">#33DDDDDD</color>
 
