[修正] 帳戶歷史被取消注單的文字未正常顯示

--- a/app/src/main/res/layout/item_account_history_next_content.xml
+++ b/app/src/main/res/layout/item_account_history_next_content.xml
@@ -239,6 +239,7 @@
                 android:textColor="@color/color_E44438_e44438"
                 android:textSize="@dimen/textSize12sp"
                 app:betReceiptStatus="@{row.status}"
+                app:betResultCancelBy="@{row.cancelledBy}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_bet"
                 app:statusVisibility="@{row.status}"
