--- a/app/src/main/res/layout/item_account_history_next_content_parlay.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay.xml
@@ -143,6 +143,7 @@
                 android:textColor="@color/color_E44438_e44438"
                 android:textSize="@dimen/textSize12sp"
                 app:betReceiptStatus="@{row.status}"
+                app:betResultCancelBy="@{row.cancelledBy}"
                 app:statusVisibility="@{row.status}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_bet"
