[調整] 帳戶歷史第二層layout(文字粗體、顏色)

--- a/app/src/main/res/layout/item_account_history_next_content.xml
+++ b/app/src/main/res/layout/item_account_history_next_content.xml
@@ -110,6 +110,7 @@
                 android:gravity="start"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize14sp"
+                android:textStyle="bold"
                 app:gameType="@{row.gameType}"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintEnd_toStartOf="@id/list_score"
@@ -198,7 +199,7 @@
                 android:id="@+id/tv_bet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/bet_info_list_bet_quota"
+                android:text="@string/bet_receipt_bet_quota"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
@@ -212,6 +213,7 @@
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/tv_win_lose"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toEndOf="@id/tv_bet"
@@ -252,6 +254,7 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="viewEnd"
                 android:textSize="@dimen/textSize12sp"
+                android:textStyle="bold"
                 app:hideByStatus="@{row.status}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_bet"
