--- a/app/src/main/res/layout/item_account_history_next_content_parlay.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay.xml
@@ -99,7 +99,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@string/bet_info_list_bet_quota"
+                android:text="@string/bet_receipt_bet_quota"
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
@@ -115,6 +115,7 @@
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize12sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/tv_win_lose"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toEndOf="@id/tv_bet"
@@ -157,6 +158,7 @@
                 android:textAlignment="viewEnd"
                 android:textColor="@color/colorGreenLight"
                 android:textSize="@dimen/textSize12sp"
+                android:textStyle="bold"
                 app:hideByStatus="@{row.status}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_bet"
