--- a/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay_item.xml
@@ -39,6 +39,7 @@
                 android:textAlignment="viewStart"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize14sp"
+                android:textStyle="bold"
                 app:gameType="@{gameType}"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintEnd_toStartOf="@id/list_score"
