--- a/app/src/main/res/layout/view_account_history_next_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_next_title_bar.xml
@@ -33,6 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textStyle="bold"
         android:text="@string/bet_num_and_bet_date"
         android:textColor="@color/color_e5e5e5_333333"
         android:textSize="@dimen/textSize14sp"
