--- a/app/src/main/res/layout/content_parlay_match.xml
+++ b/app/src/main/res/layout/content_parlay_match.xml
@@ -35,6 +35,7 @@
                     android:textAlignment="viewStart"
                     android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="@dimen/textSize14sp"
+                    android:textStyle="bold"
                     tools:text="篮球 让球" />
 
                 <LinearLayout
