--- a/app/src/main/res/layout/content_parlay_record.xml
+++ b/app/src/main/res/layout/content_parlay_record.xml
@@ -63,7 +63,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/bet_info_list_bet_quota"
+                    android:text="@string/bet_receipt_bet_quota"
                     android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="@dimen/textSize13sp" />
 
@@ -94,6 +94,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorGreenSea"
                     android:textSize="@dimen/textSize13sp"
+                    android:textStyle="bold"
                     tools:text="9,999,999.000" />
             </LinearLayout>
         </LinearLayout>
