[調整] 交易狀況 可贏額文字顏色

--- a/app/src/main/res/layout/content_outright_record.xml
+++ b/app/src/main/res/layout/content_outright_record.xml
@@ -115,7 +115,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="viewEnd"
-                    android:textColor="@color/colorGreenSea"
+                    android:textColor="@color/color_08dc6e_08dc6e"
                     android:textSize="@dimen/textSize13sp"
                     android:textStyle="bold"
                     tools:text="9,999,999.000" />
