--- a/app/src/main/res/layout/home_game_table_item_4.xml
+++ b/app/src/main/res/layout/home_game_table_item_4.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/home_tab_in_play2"
+        android:text="@string/home_tab_in_play"
         android:textColor="@color/color_A3A3A3_666666"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintStart_toStartOf="@+id/table_match_info_border"
