--- a/app/src/main/res/layout/home_recommend_champion.xml
+++ b/app/src/main/res/layout/home_recommend_champion.xml
@@ -88,6 +88,7 @@
             android:layout_height="wrap_content"
             android:drawablePadding="10dp"
             android:text="@string/display_more"
+            android:textColor="@color/color_A3A3A3_666666"
             android:textAllCaps="true"
             android:textSize="@dimen/textSize14sp"
             android:textStyle="bold"
