--- a/app/src/main/res/layout/itemview_outright_odd_more_v4.xml
+++ b/app/src/main/res/layout/itemview_outright_odd_more_v4.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:drawablePadding="10dp"
         android:text="@string/display_more"
+        android:textColor="@color/color_A3A3A3_666666"
         android:textSize="@dimen/textSize14sp"
         android:textAllCaps="true" />
 
