--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -82,6 +82,7 @@
     <color name="color_404040_e2e2e2">@color/color_404040</color>
     <color name="color_1f1f1f_fcfcfc">@color/color_1F1F1F</color>
     <color name="color_33303030_33DDDDDD">@color/color_33303030</color>
+    <color name="color_F75452_000000">@color/color_F75452</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#1AFFFFFF</color>
