--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -162,6 +162,7 @@
     <color name="color_404040_e2e2e2">@color/color_E2E2E2</color>
     <color name="color_1f1f1f_fcfcfc">@color/color_FCFCFC</color>
     <color name="color_33303030_33DDDDDD">@color/color_33DDDDDD</color>
+    <color name="color_F75452_000000">@color/color_000000</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#40FFFFFF</color>
