--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -401,9 +401,22 @@
         android:scaleType="centerCrop"
         android:src="@drawable/selector_star_v4"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_quick_cate_divider"
+        app:layout_constraintEnd_toStartOf="@id/league_neutral"
+        app:layout_constraintTop_toTopOf="@id/guide_game_bottom"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:id="@+id/league_neutral"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginEnd="6dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/selector_neutral_v5"
+        app:layout_constraintBottom_toBottomOf="@id/league_odd_quick_cate_divider"
         app:layout_constraintEnd_toEndOf="@id/guide_content"
         app:layout_constraintTop_toTopOf="@id/guide_game_bottom"
         tools:ignore="ContentDescription" />
+
 
 
     <androidx.recyclerview.widget.RecyclerView
