--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -411,6 +411,8 @@
         android:layout_marginEnd="6dp"
         android:scaleType="centerCrop"
         android:src="@drawable/selector_neutral_v5"
+        android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_quick_cate_divider"
         app:layout_constraintEnd_toEndOf="@id/guide_content"
         app:layout_constraintTop_toTopOf="@id/guide_game_bottom"
