--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -383,7 +383,8 @@
         android:id="@+id/league_odd_match_chart"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="2dp"
+        android:padding="1dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_chart"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_quick_cate_divider"
@@ -396,8 +397,9 @@
         android:id="@+id/league_odd_match_favorite"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="6dp"
+        android:layout_marginEnd="2dp"
         android:scaleType="centerCrop"
+        app:layout_goneMarginEnd="0dp"
         android:src="@drawable/selector_star_v4"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_quick_cate_divider"
         app:layout_constraintEnd_toStartOf="@id/league_neutral"
@@ -406,9 +408,9 @@
 
     <ImageView
         android:id="@+id/league_neutral"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginEnd="6dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:padding="4.5dp"
         android:scaleType="centerCrop"
         android:src="@drawable/selector_neutral_v5"
         android:visibility="gone"
