--- a/app/src/main/res/layout/activity_results_settlement.xml
+++ b/app/src/main/res/layout/activity_results_settlement.xml
@@ -103,6 +103,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
+            android:includeFontPadding="false"
             android:layout_marginEnd="6dp"
             android:layout_weight="3"
             android:background="@drawable/search_gray_5dp"
