[Fix] 修正字型跑版

--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -36,7 +36,7 @@
     <LinearLayout
         android:id="@+id/rech_log_column"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:background="@color/color_262626_edf4ff"
         android:clipToPadding="false"
         android:clipChildren="false"
@@ -55,8 +55,7 @@
             android:paddingEnd="@dimen/margin_2"
             android:text="@string/text_account_history_time"
             android:textColor="@color/color_e5e5e5_333333"
-            app:autoSizeMaxTextSize="@dimen/textSize12sp"
-            app:autoSizeMinTextSize="@dimen/textSize8sp" />
+            android:textSize="@dimen/textSize12sp"/>
 
         <TextView
             android:id="@+id/rech_log_recharge_amount"
@@ -71,8 +70,7 @@
             android:ellipsize="end"
             android:text="@string/text_account_history_number"
             android:textColor="@color/color_e5e5e5_333333"
-            app:autoSizeMaxTextSize="@dimen/textSize12sp"
-            app:autoSizeMinTextSize="@dimen/textSize8sp" />
+            android:textSize="@dimen/textSize12sp" />
 
         <TextView
             android:id="@+id/recg_log_channel_type"
@@ -87,8 +85,7 @@
             android:paddingEnd="@dimen/margin_2"
             android:text="@string/text_account_history_amount"
             android:textColor="@color/color_e5e5e5_333333"
-            app:autoSizeMaxTextSize="@dimen/textSize12sp"
-            app:autoSizeMinTextSize="@dimen/textSize8sp" />
+            android:textSize="@dimen/textSize12sp"/>
 
         <TextView
             android:id="@+id/rech_log_order_state"
@@ -103,8 +100,7 @@
             android:paddingStart="@dimen/margin_2"
             android:paddingEnd="@dimen/margin_2"
             android:textColor="@color/color_e5e5e5_333333"
-            app:autoSizeMaxTextSize="@dimen/textSize12sp"
-            app:autoSizeMinTextSize="@dimen/textSize8sp" />
+            android:textSize="@dimen/textSize12sp"/>
     </LinearLayout>
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
