--- a/app/src/main/res/layout/fragment_left_menu.xml
+++ b/app/src/main/res/layout/fragment_left_menu.xml
@@ -48,19 +48,18 @@
             <!--                android:textStyle="bold" />-->
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="35dp"
                 android:layout_marginStart="@dimen/margin_12"
-                android:layout_marginTop="@dimen/margin_10"
                 android:layout_marginEnd="@dimen/margin_6"
-                android:layout_marginBottom="@dimen/margin_10"
                 android:layout_weight="1"
+                android:layout_gravity="center"
                 android:background="@drawable/bg_search_layout"
                 android:gravity="center_vertical">
 
                 <ImageView
                     android:layout_width="@dimen/margin_16"
                     android:layout_height="@dimen/margin_16"
-                    android:layout_marginStart="@dimen/margin_12"
+                    android:layout_marginStart="@dimen/margin_10"
                     android:src="@drawable/ic_search" />
 
                 <EditText
@@ -81,10 +80,10 @@
 
             <ImageView
                 android:id="@+id/btn_close"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="6dp"
                 android:background="@null"
                 android:padding="8dp"
                 android:contentDescription="@null"
@@ -127,7 +126,8 @@
                 <View
                     android:id="@+id/view1"
                     android:layout_width="@dimen/margin_2"
-                    android:layout_height="@dimen/margin_14"
+                    android:layout_height="0dp"
+                    android:layout_marginVertical="4dp"
                     android:background="@drawable/bg_search_title_left"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/tvHistoryTittle"
@@ -138,10 +138,10 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/tvHistoryTittle"
                     android:text="@string/text_search_history"
-                    android:textColor="@color/color_FCFCFC_191919"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="@dimen/margin_14"
                     android:textStyle="bold"
-                    android:layout_marginStart="@dimen/margin_16"
+                    android:layout_marginStart="@dimen/margin_14"
                     app:layout_constraintStart_toEndOf="@+id/view1"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -178,7 +178,8 @@
                 <View
                     android:id="@+id/view2"
                     android:layout_width="@dimen/margin_2"
-                    android:layout_height="@dimen/margin_14"
+                    android:layout_height="0dp"
+                    android:layout_marginVertical="4dp"
                     android:background="@drawable/bg_search_title_left"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/tvTopTittle"
@@ -192,9 +193,10 @@
                     android:textColor="@color/color_191919_FCFCFC"
                     android:textSize="@dimen/margin_14"
                     android:textStyle="bold"
-                    android:layout_marginStart="@dimen/margin_16"
+                    android:layout_marginStart="@dimen/margin_14"
                     app:layout_constraintStart_toEndOf="@+id/view2"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Search History"/>
 
                 <TextView
                     android:layout_width="wrap_content"
