--- a/app/src/main/res/layout/item_search_result_league.xml
+++ b/app/src/main/res/layout/item_search_result_league.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,37 +9,39 @@
     <View
         android:id="@+id/view1"
         android:layout_width="@dimen/margin_2"
-        android:layout_height="@dimen/margin_14"
+        android:layout_height="0dp"
+        android:layout_marginVertical="4dp"
         android:background="@drawable/bg_search_title_left"
+        app:layout_constraintBottom_toBottomOf="@+id/tvLeagueTittle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvLeagueTittle"
-        app:layout_constraintBottom_toBottomOf="@+id/tvLeagueTittle"/>
+        app:layout_constraintTop_toTopOf="@+id/tvLeagueTittle" />
 
     <org.cxct.sportlottery.widget.highLightTextView.HighlightTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/tvLeagueTittle"
-        android:textColor="@color/color_FCFCFC_191919"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_16"
+        android:gravity="start"
+        android:text="Lorem ipsum UFC dolor sit amet,"
+        android:textColor="@color/color_e5e5e5_333333"
         android:textSize="@dimen/margin_14"
         android:textStyle="bold"
-        app:highlightText="UFC"
-        android:text="Lorem ipsum UFC dolor sit amet,"
-        app:highlightRadius="0dp"
-        android:gravity="center_horizontal"
         app:highlightColor="@color/color_317FFF_0760D4"
-        app:highlightTextColor="@color/color_FCFCFC_191919"
-        android:layout_marginStart="@dimen/margin_16"
-        app:layout_constraintStart_toEndOf="@+id/view1"
+        app:highlightRadius="0dp"
+        app:highlightText="UFC"
+        app:highlightTextColor="@color/color_FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvResultMatch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rvResultMatch"
-        android:layout_marginStart="@dimen/margin_16"
-        app:layout_constraintTop_toBottomOf="@+id/tvLeagueTittle"
+        android:layout_marginStart="@dimen/margin_10"
+        android:layout_marginTop="@dimen/margin_16"
+        android:layout_marginBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="@dimen/margin_8"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvLeagueTittle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
