--- a/app/src/main/res/layout/item_search_result_sport.xml
+++ b/app/src/main/res/layout/item_search_result_sport.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,33 +9,35 @@
     <View
         android:id="@+id/view1"
         android:layout_width="@dimen/margin_2"
-        android:layout_height="@dimen/margin_14"
+        android:layout_height="0dp"
+        android:layout_marginVertical="4dp"
         android:background="@drawable/bg_search_title_left"
+        app:layout_constraintBottom_toBottomOf="@+id/tvResultTittle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvResultTittle"
-        app:layout_constraintBottom_toBottomOf="@+id/tvResultTittle"/>
+        app:layout_constraintTop_toTopOf="@+id/tvResultTittle" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/tvResultTittle"
-        android:textColor="@color/color_FCFCFC_191919"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_14"
+        android:text="1234"
+        android:textColor="@color/color_e5e5e5_333333"
         android:textSize="@dimen/margin_14"
         android:textStyle="bold"
-        android:text="1234"
-        android:layout_marginStart="@dimen/margin_16"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/view1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvResultLeague"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rvResultLeague"
-        app:layout_constraintHeight_default="wrap"
         android:layout_marginStart="@dimen/margin_16"
-        app:layout_constraintTop_toBottomOf="@+id/tvResultTittle"
+        android:layout_marginTop="@dimen/margin_10"
+        android:layout_marginBottom="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="@dimen/margin_8"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintHeight_default="wrap"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvResultTittle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
