--- a/app/src/main/res/layout/content_bet_info_item_v2.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v2.xml
@@ -244,7 +244,7 @@
                             android:maxLength="7"
                             android:paddingStart="10dp"
                             android:textColor="@color/color_FFFFFF_060F20"
-                            android:textColorHint="@color/color_404040_cccccc"
+                            android:textColorHint="@color/color_404040"
                             android:textSize="@dimen/textSize16sp"
                             app:layout_constraintBottom_toTopOf="@+id/tv_error_message"
                             app:layout_constraintStart_toStartOf="parent"
