--- a/app/src/main/res/layout/view_odds_detail_toolbar.xml
+++ b/app/src/main/res/layout/view_odds_detail_toolbar.xml
@@ -286,7 +286,7 @@
                     android:id="@+id/tv_time_top"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_cccccc"
+                    android:textColor="@color/color_BCBCBC_CCCCCC"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="17 / 16" />
 
@@ -295,7 +295,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/time_null"
-                    android:textColor="@color/color_cccccc"
+                    android:textColor="@color/color_BCBCBC_CCCCCC"
                     android:textSize="@dimen/textSize12sp" />
 
             </LinearLayout>
@@ -313,7 +313,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginBottom="10dp"
-                android:textColor="@color/color_cccccc"
+                android:textColor="@color/color_BCBCBC_CCCCCC"
                 android:textSize="@dimen/textSize12sp"
                 android:visibility="gone"
                 app:layout_constrainedWidth="true"
@@ -330,7 +330,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:textColor="@color/color_cccccc"
+                android:textColor="@color/color_BCBCBC_CCCCCC"
                 android:textSize="@dimen/textSize12sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -345,7 +345,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:textColor="@color/color_cccccc"
+                android:textColor="@color/color_BCBCBC_CCCCCC"
                 android:textSize="@dimen/textSize12sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_status_left"
