--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -83,6 +83,8 @@
     <color name="color_1f1f1f_fcfcfc">@color/color_1F1F1F</color>
     <color name="color_33303030_33DDDDDD">@color/color_33303030</color>
     <color name="color_F75452_000000">@color/color_F75452</color>
+    <color name="color_BCBCBC_CCCCCC">@color/color_bcbcbc</color>
+    <color name="color_404348_404040">@color/color_404348</color>
 
     <!--region 特殊處理顏色-->
     <color name="home_card_top_text_color">#1AFFFFFF</color>
