修复赔率未知时的样式

--- a/app/src/main/res/layout/home_menu_block.xml
+++ b/app/src/main/res/layout/home_menu_block.xml
@@ -61,7 +61,7 @@
                 android:layout_marginStart="10dp"
                 android:includeFontPadding="false"
                 android:paddingTop="2dp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/home_card_text_color"
                 android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold"
                 app:layout_constrainedWidth="true"
@@ -78,7 +78,7 @@
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginBottom="10dp"
                 android:includeFontPadding="false"
-                android:textColor="@android:color/white"
+                android:textColor="@color/home_card_text_color"
                 android:textSize="@dimen/textSize15sp"
                 android:textStyle="bold"
                 app:layout_constrainedWidth="true"
@@ -111,7 +111,7 @@
                 android:includeFontPadding="false"
                 android:maxLines="1"
                 android:text="@string/top_games"
-                android:textColor="@android:color/white"
+                android:textColor="@color/home_card_text_color"
                 android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
                 android:paddingTop="2dp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/home_card_text_color"
                 android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold"
                 app:layout_constrainedWidth="true"
@@ -155,7 +155,7 @@
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginBottom="10dp"
                 android:includeFontPadding="false"
-                android:textColor="@android:color/white"
+                android:textColor="@color/home_card_text_color"
                 android:textSize="@dimen/textSize15sp"
                 android:textStyle="bold"
                 app:layout_constrainedWidth="true"
