--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -20,6 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/loading"
-        android:textColor="@color/color_191919_FCFCFC" />
+        android:textColor="@color/color_FCFCFC" />
 
 </LinearLayout>
