--- a/app/src/main/res/drawable/shape_date_item_bg_v4.xml
+++ b/app/src/main/res/drawable/shape_date_item_bg_v4.xml
@@ -5,5 +5,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/selector_date_item_bg_stroke_v4" />
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/color_191919_FCFCFC" />
 </shape>
