--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -83,6 +83,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            app:layout_goneMarginStart="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/bg_gradient_0068d6_0054ac_4dp"
             android:gravity="center"
