优化夜间模式，真实姓名根据当前语言做限制

--- a/app/src/main/res/layout/activity_phone_verify.xml
+++ b/app/src/main/res/layout/activity_phone_verify.xml
@@ -158,7 +158,7 @@
             android:enabled="false"
             android:text="@string/btn_submit"
             android:textAllCaps="false"
-            android:textColor="@android:color/white"
+            android:textColor="@color/color_FCFCFC"
             android:textSize="@dimen/textSize16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scrollView" />
