--- a/app/src/main/res/layout/activity_setting_password.xml
+++ b/app/src/main/res/layout/activity_setting_password.xml
@@ -62,7 +62,7 @@
         android:minWidth="135dp"
         android:minHeight="36dp"
         android:text="@string/btn_confirm"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize14sp" />
 
 </LinearLayout>
