--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -127,7 +127,7 @@
         android:layout_height="wrap_content"
         android:background="@color/color_F75452_b73a20"
         android:paddingHorizontal="1dp"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize12sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_match_name_home"
@@ -228,7 +228,7 @@
         android:layout_height="wrap_content"
         android:background="@color/color_F75452_b73a20"
         android:paddingHorizontal="1dp"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize12sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/league_odd_match_name_away"
