--- a/app/src/main/res/layout/activity_google_permission.xml
+++ b/app/src/main/res/layout/activity_google_permission.xml
@@ -71,7 +71,7 @@
         android:paddingVertical="9dp"
         android:text="@string/allow_location_permission"
         android:textAlignment="center"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
