--- a/app/src/main/res/layout/dialog_bottom_sheet_custom.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_custom.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:layout_gravity="bottom"
     android:orientation="vertical"
+    android:background="@color/color_191919_FCFCFC"
     tools:ignore="spUsage">
 
     <TextView
