--- a/app/src/main/res/layout/dialog_bottom_sheet_settlement_league_type.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_settlement_league_type.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/color_191919_FCFCFC"
     android:orientation="vertical">
 
     <include
