--- a/app/src/main/res/layout/dialog_security_deposit.xml
+++ b/app/src/main/res/layout/dialog_security_deposit.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_191919_FCFCFC"
+    app:cardBackgroundColor="@color/color_191919_FCFCFC"
     android:orientation="vertical"
     app:cardCornerRadius="8dp"
     app:cardElevation="0dp"
