--- a/app/src/main/res/layout/fragment_money_transfer_sub.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_sub.xml
@@ -123,7 +123,7 @@
         android:gravity="center"
         android:maxWidth="100dp"
         android:text="@string/confirm_transform"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_transfer_money" />
