--- a/app/src/main/res/layout/home_game_table_item_4.xml
+++ b/app/src/main/res/layout/home_game_table_item_4.xml
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/color_F75452_b73a20"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize14sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@id/tv_game_score_home"
@@ -125,7 +125,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/color_F75452_b73a20"
-        android:textColor="@color/color_191919_FCFCFC"
+        android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize14sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@id/tv_game_score_away"
